Add cart sidebar popup that slides in when items are added to basket

--- a/product.html
+++ b/product.html
@@ -37,6 +37,24 @@
         <p>&copy; 2025 Pickup Edge</p>
     </footer>
 
+    <!-- Cart Sidebar -->
+    <div class="cart-sidebar-overlay" id="cart-sidebar-overlay"></div>
+    <aside class="cart-sidebar" id="cart-sidebar">
+        <div class="cart-sidebar-header">
+            <h2 class="cart-sidebar-title">Added to Cart</h2>
+            <button class="cart-sidebar-close" id="cart-sidebar-close">✕</button>
+        </div>
+        
+        <div class="cart-sidebar-content" id="cart-sidebar-content">
+            <!-- Items will be inserted here -->
+        </div>
+        
+        <div class="cart-sidebar-footer">
+            <a href="cart.html" class="cart-sidebar-btn view">View Cart</a>
+            <a href="cart.html" class="cart-sidebar-btn checkout">Checkout</a>
+        </div>
+    </aside>
+
     <script src="cart.js"></script>
 </body>
 </html>
